--- a/css/main.css
+++ b/css/main.css
@@ -174,4 +174,4 @@ body .cart .cart__icon {
   .cart p {
     margin: 0;
   }
-}/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=main.css.map */
