--- a/css/_base.scss
+++ b/css/_base.scss
@@ -14,6 +14,22 @@ $fontFamily: "Barlow Condensed", Arial, Helvetica, sans-serif;
     color: $color;
 }
 
+%generalButton{
+    @include generalspace(100%, 10px, 0px, #fff);
+            font-weight: 600;
+            border-radius: 35px;
+            box-sizing: border-box;
+            box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, .5);
+            border-color: #f76ea6;
+            background-color: #f76ea6;
+}
+
+%generalButtonHover{
+    background-color: #e70b67;
+    transform: scale(1.05);
+}
+
+
 %align {
     text-align: center;
     font-size: $fontSize;
