--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -7,7 +7,7 @@ body {
     
 
     .header{
-        @include generalspace(100%, 20px, 0px, $mainColor);
+        @include generalspace(100%, 20px, 10px, $mainColor);
         @include flexbox();
         background-color: #f76ea6;
         box-sizing: border-box;
@@ -20,7 +20,24 @@ body {
 
         & .header__logo{
             width: 100px;
-        }  
+        }
+        
+        & .header__cart{
+            position: relative;
+            display: inline-block;
+        }
+
+        & .header__cartBadge{
+            position: absolute;
+            top: -6px;
+            right: -6px;
+            background-color: rgb(145, 2, 2);
+            color: #fff;
+            font-size: 0.7rem;
+            border-radius: 50%;
+            padding: 4px 7px;
+            display: none;
+        }
     }
 
     .banner{
@@ -70,8 +87,29 @@ body {
         & .products__price{
             font-weight: 300;
             font-size: 15px;
+            &.red{
+                color: #e70b67;
+                font-weight: 600;
+            }
+            &.blue{
+                color: #0b58e7;
+                font-weight: 600;
+            }
+        }
+        
+        & .products__button{
+            @extend %generalButton;
+            width: 60%;
+            box-shadow: none;
+            margin-bottom: 20px;
+        }
+
+        & .products__button:hover{
+            @extend %generalButtonHover;
         }
     }
+
+    
 
     .cart {
         @include generalspace(500px, 25px, 25px, $mainColor);
@@ -82,6 +120,11 @@ body {
         right: -100%;
         top: 100px;
         box-shadow: -19px -1px 22px -15px rgba(0, 0, 0, 0.30);
+        transition: all .30s ease;
+        
+        &.show{
+            right: 0;
+        }
 
         & .cart__name {
             @include generalspace(100%, 25px, 0px, $mainColor);
@@ -109,8 +152,76 @@ body {
             width: 25px;
             cursor: pointer;
         }
-    }        
+        
+        & .cart__button{
+            @extend %generalButton;
+        }
+
+        & .cart__button:hover{
+            @extend %generalButtonHover;
+        }
+    }
+
+    .myAside {
+        @include generalspace (500px, 25px, 25px, $mainColor);
+        background-color: #fff;
+        box-sizing: border-box;
+        height: 100%;
+        position: fixed;
+        left:-100%;
+        top: 100px;
+        box-shadow: -19px -1px 22px -15px rgba(0, 0, 0, 0.30);
+        transition: all .35s ease;
+
+        &.showAside{
+            left: 0;            
+        }
+
+        & .aside__name{
+            @include generalspace(100%, 5px, 0px, $mainColor);
+            text-align: left;
+            font-weight: 600;
+            box-sizing: border-box;   
+        }
+
+        & .aside__closeIcon{
+            width: 25px;
+            cursor: pointer;
+        }
+
+        & .aside__closeIcon:hover{
+                transform: scale(1.5);
+            }
+
+        & .aside__item{
+            @include flexbox();
+            border-bottom: 1 solid #f76ea6;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+
+        & .aside__img{
+            width: 60px;
+        }
+
+        & .aside__price{
+            font-weight: 500;
+        }
+
+        & .aside__removeIcon{
+            width: 25px;
+            cursor: pointer;
+        }
+        & .aside__button{
+            @extend %generalButton;
+        }
+        & .aside__button:hover{
+            @extend %generalButtonHover;
+        }
+    }
 }
+
+
 
 @media (max-width: 820px){
     .header{
